# cpp_project_example

./: CMakeLists.txt  README.adoc
cmake/: utils.cmake
src/: CMakeLists.txt  module1.cpp  module1.h  module1_test.cpp  module2.cpp  module2.h  module2_test.cpp
